src/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Takeaways__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Takeaways</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Registration__c</fullName>
        <label>Max Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used if you wish to build a web integration that will publish track info on your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Category__c</fullName>
        <label>Track Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Track A</fullName>
                </value>
                <value>
                    <fullName>Sales Track B</fullName>
                </value>
                <value>
                    <fullName>Product Track A</fullName>
                </value>
                <value>
                    <fullName>Product Track B</fullName>
                </value>
                <value>
                    <fullName>Product Track C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Track Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Track_Status__c</fullName>
        <label>Track Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Leader Identified</fullName>
                </value>
                <value>
                    <fullName>Sessions Pending</fullName>
                </value>
                <value>
                    <fullName>Draft Sessions Submitted</fullName>
                </value>
                <value>
                    <fullName>Sent to Copy Edit</fullName>
                </value>
                <value>
                    <fullName>Editorial Review Completed</fullName>
                </value>
                <value>
                    <fullName>Technical Review Completed</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Ready to Publish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Track Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>